--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<meta http-equiv=“X-UA-Compatible” content=“ie=edge”>
 <html>
 <head>
 	<title>HELP-UKRAINE</title>
-	<link rel="stylesheet" type="text/css" href="D:\Рабочее\Website\Website_Final\HelpUkraine\main.css">
+	<link rel="stylesheet" type="text/css" href="D:\Рабочее\Website\Website_2023\Website_2023\main.css">
 </head>
 <body>
 	<div class="Hero-banner">
