Added a soldier logo and sky

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<div class="Hero-banner">
 		<div class="wrapper">
 			<h1 class="uniforms">Do you have used<br> uniforms?<br/></h1>
-			<div class="soldier_box"><img src="D:\Рабочее\Website\Website_Final\HelpUkraine\soldier_main_draft.png" alt=""></div>
+			<div class="soldier_box"><img src="D:\Рабочее\Website\Website_2023\Website_2023\soldier_main_draft.png" alt=""></div>
 			<h1 class="ctaalt"><a class="cta alt" href="#nav">Help Ukrainian army</a></h1>
 		</div>
 	</div>
