Making swaping pictures

--- a/website.html
+++ b/website.html
@@ -32,17 +32,18 @@
 	<div class="separator"></div>
 	<div class="our-story">
 		<div class="wrapper">
-			<div class="images">
-				<img class="fotosklad pic1" src="D:\Рабочее\Website\Website_Final\HelpUkraine\Sklad_demo_1.jpg">
-				<img class="fotosklad pic2"  src="D:\Рабочее\Website\Website_Final\HelpUkraine\Sklad_demo_2.jpg">
-				<img class="fotosklad pic3" src="D:\Рабочее\Website\Website_Final\HelpUkraine\Sklad_demo_3.jpg">
-			</div>
-
 			<h3>Our story</h3>
+			<div class="images img_state1" id="img_block">
+				<img class='animation state1' id ='state1' src="D:\Рабочее\Website\Website_2023\Website_2023\Nature.jpg">
+				<img class='animation state2' id ='state2' src="D:\Рабочее\Website\Website_2023\Website_2023\Nature_2.jpg">
+				<img class='animation state3' id ='state3' src="D:\Рабочее\Website\Website_2023\Website_2023\Nature_3.jpg">
+				
+			</div>
+			<button class="btn" onclick="change_image();">CLICK THIS</button>
 			<p>Our storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur story</p>
 
 </div>
-			</div>
+		</div>
 	<div class="separator">
 		
 	</div>
