images are changing now and added a button

--- a/website.html
+++ b/website.html
@@ -34,12 +34,11 @@
 		<div class="wrapper">
 			<h3>Our story</h3>
 			<div class="images img_state1" id="img_block">
-				<img class='animation state1' id ='state1' src="D:\Рабочее\Website\Website_2023\Website_2023\Nature.jpg">
-				<img class='animation state2' id ='state2' src="D:\Рабочее\Website\Website_2023\Website_2023\Nature_2.jpg">
-				<img class='animation state3' id ='state3' src="D:\Рабочее\Website\Website_2023\Website_2023\Nature_3.jpg">
-				
+				<img class='animation state1' onclick="change_image_state(2);" id ='state1' src="D:\Рабочее\Website\Website_2023\Website_2023\Nature.jpg">
+				<img class='animation state2' onclick="change_image_state(3);" id ='state2' src="D:\Рабочее\Website\Website_2023\Website_2023\Nature_2.jpg">
+				<img class='animation state3' onclick="change_image_state(0);" id ='state3' src="D:\Рабочее\Website\Website_2023\Website_2023\Nature_3.jpg">
+				<button class="qwerty">CLICK THIS</button>
 			</div>
-			<button class="btn" onclick="change_image();">CLICK THIS</button>
 			<p>Our storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur story</p>
 
 </div>
