everything is working for now

--- a/website.html
+++ b/website.html
@@ -3,6 +3,7 @@
 <head>
 	<title>HELP-UKRAINE</title>
 	<link rel="stylesheet" type="text/css" href="D:\Рабочее\Website\Website_2023\Website_2023\main.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
 </head>
 <body>
 	<div class="Hero-banner">
@@ -34,10 +35,12 @@
 		<div class="wrapper">
 			<h3>Our story</h3>
 			<div class="images img_state1" id="img_block">
-				<img class='animation state1' onclick="change_image_state(2);" id ='state1' src="D:\Рабочее\Website\Website_2023\Website_2023\Nature.jpg">
-				<img class='animation state2' onclick="change_image_state(3);" id ='state2' src="D:\Рабочее\Website\Website_2023\Website_2023\Nature_2.jpg">
-				<img class='animation state3' onclick="change_image_state(0);" id ='state3' src="D:\Рабочее\Website\Website_2023\Website_2023\Nature_3.jpg">
-				<button class="qwerty">CLICK THIS</button>
+				<img class='animation state1' id ='state1' src="D:\Рабочее\Website\Website_2023\Website_2023\Nature.jpg">
+				<img class='animation state2' id ='state2' src="D:\Рабочее\Website\Website_2023\Website_2023\Nature_2.jpg">
+				<img class='animation state3' id ='state3' src="D:\Рабочее\Website\Website_2023\Website_2023\Nature_3.jpg">
+				<button class="owl owl1" onclick="change_image_state(1);"></button>
+				<button class="owl owl2" onclick="change_image_state(2);"></button>
+				<button class="owl owl3" onclick="change_image_state(3);"></button>
 			</div>
 			<p>Our storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur story</p>
 
@@ -81,6 +84,8 @@
 	</div>
 
 
-</body>
+<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script src="script.js" type="text/javascript"></script>
+</body>
+
 </html>
