Finally made the slideshow

--- a/website.html
+++ b/website.html
@@ -34,13 +34,23 @@
 	<div class="our-story">
 		<div class="wrapper">
 			<h3>Our story</h3>
-			<div class="images img_state1" id="img_block">
-				<img class='animation state1' id ='state1' src="D:\Рабочее\Website\Website_2023\Website_2023\Nature.jpg">
-				<img class='animation state2' id ='state2' src="D:\Рабочее\Website\Website_2023\Website_2023\Nature_2.jpg">
-				<img class='animation state3' id ='state3' src="D:\Рабочее\Website\Website_2023\Website_2023\Nature_3.jpg">
-				<button class="owl owl1" onclick="change_image_state(1);"></button>
-				<button class="owl owl2" onclick="change_image_state(2);"></button>
-				<button class="owl owl3" onclick="change_image_state(3);"></button>
+			<div class="container">
+				<div class="swiper">
+				  <!-- Additional required wrapper -->
+				  <div class="swiper-wrapper">
+					    <!-- Slides -->
+					   <div class="swiper-slide"><img src="D:\Рабочее\Website\Website_2023\Website_2023\Nature.jpg"></div>
+					   <div class="swiper-slide"><img src="D:\Рабочее\Website\Website_2023\Website_2023\Nature_2.jpg"></div>
+					   <div class="swiper-slide"><img src="D:\Рабочее\Website\Website_2023\Website_2023\Nature_3.jpg"></div>
+				    ...
+				  </div>
+				  <!-- If we need pagination -->
+				  <div class="swiper-pagination"></div>
+
+				  <!-- If we need navigation buttons -->
+				  <div class="swiper-button-prev"></div>
+				  <div class="swiper-button-next"></div>
+				</div>
 			</div>
 			<p>Our storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur story</p>
 
