--- a/website.html
+++ b/website.html
@@ -40,8 +40,8 @@
 				  <div class="swiper-wrapper">
 					    <!-- Slides -->
 					   <div class="swiper-slide"><img src="D:\Рабочее\Website\Website_2023\Website_2023\Nature.jpg"></div>
-					   <div class="swiper-slide"><img src="D:\Рабочее\Website\Website_2023\Website_2023\Nature_2.jpg"></div>
-					   <div class="swiper-slide"><img src="D:\Рабочее\Website\Website_2023\Website_2023\Nature_3.jpg"></div>
+					   <div class="swiper-slide"><img src="D:\Рабочее\Website\Website_2023\Website_2023\Nature_2.jpg" alt=""></div>
+					   <div class="swiper-slide"><img src="D:\Рабочее\Website\Website_2023\Website_2023\Nature_3.jpg" alt=""></div>
 				    ...
 				  </div>
 				  <!-- If we need pagination -->
@@ -56,10 +56,23 @@
 
 </div>
 		</div>
-	<div class="separator">
 		
 	</div>
-	<img src="D:\Рабочее\Website\Website_Final\HelpUkraine\WeBelieve.png" class="WeBelieve" alt="WeBelieve" width="800px" height="150px">
+	<footer>
+		<div class="footer-top"></div>
+			<div class="footer-logo"><img src="D:\Рабочее\Website\Website_2023\Website_2023\LOGO_white.png"></div>
+			<div class="social"></div>
+		</div>
+		<div class="links">
+			<div class="column-1">
+				<div class="foot-header">Information</div>
+				<ul>
+					<li><a href="#">Warehouse</a></li>
+					<li><a href="#">Receivers</a></li>
+				</ul>
+			</div>
+		</div>
+	</footer>
 	</div>
 	<div class="popup" id="popup">
 		<div class="blanket"></div>
