--- a/website.html
+++ b/website.html
@@ -71,7 +71,23 @@
 					<li><a href="#">Receivers</a></li>
 				</ul>
 			</div>
+			<div class="column-2">
+				<div class="foot-header">Documents</div>
+				<ul>
+					<li><a href="#">Invoices</a></li>
+					<li><a href="#">Acts of receiving</a></li>
+				</ul>
+			</div>
+			<div class="column-3">
+				<div class="foot-header">Help</div>
+				<ul>
+					<li><a href="#">Contact</a></li>
+					<li><a href="#">Email Address</a></li>
+				</ul>
+			</div>
 		</div>
+		<div class="fot-sep"></div>
+		<div class="copyright">Made by Joseph Gresko &#169;</div>
 	</footer>
 	</div>
 	<div class="popup" id="popup">
@@ -99,10 +115,18 @@
 					    <input type="text" placeholder="Phone number">
 					</div>
 				</div>
-				<button class="cta yellow">Submit</button>
-
+				<button class="cta submit" onclick="showPopup2();">Submit</button>
 			</form>
 			<button class="close" onclick="hidePopup();"></button>
+		</div>
+	</div>
+	<div class="popup-2" id="popup-2">
+		<div class="blanket"></div>
+		<div class="content">
+			<img src="D:\Рабочее\Website\Website_2023\Website_2023\404-tick.png" alt="">
+			<h2>Thank you</h2>
+			<p>Your details has been successfully submitted. Thanks!</p>
+			<button type="ok-button">OK</button>
 		</div>
 	</div>
 
