--- a/website.html
+++ b/website.html
@@ -115,7 +115,7 @@
 					    <input type="text" placeholder="Phone number">
 					</div>
 				</div>
-				<button class="cta submit" onclick="showPopup2();">Submit</button>
+				<a href="javascript:()" class="cta submit" onclick="showPopup2();">Submit</a>
 			</form>
 			<button class="close" onclick="hidePopup();"></button>
 		</div>
@@ -126,7 +126,7 @@
 			<img src="D:\Рабочее\Website\Website_2023\Website_2023\404-tick.png" alt="">
 			<h2>Thank you</h2>
 			<p>Your details has been successfully submitted. Thanks!</p>
-			<button type="ok-button">OK</button>
+			<button type="ok-button" onclick="hidePopup2();">OK</button>
 		</div>
 	</div>
 
