--- a/website.html
+++ b/website.html
@@ -98,24 +98,24 @@
 				<div class="row">
 					<div class="item">
 					    <label>First Name</label>
-					    <input type="text" placeholder="First Name">
+					    <input type="text" class="text" id="text1" placeholder="First Name">
 					</div>
 					<div class="item">
 					    <label>Last Name</label>
-					    <input type="text" placeholder="Last Name">
+					    <input type="text" class="text" id="text2" placeholder="Last Name">
 					</div>
 				</div>
 				<div class="row">
 					<div class="item">
 					    <label>Email</label>
-					    <input type="text" placeholder="Email">
+					    <input type="text" class="text" id="text3" placeholder="Email">
 					</div>
 					<div class="item">
 					    <label>Phone number</label>
-					    <input type="text" placeholder="Phone number">
+					    <input type="text" class="text" id="text4" placeholder="Phone number">
 					</div>
 				</div>
-				<a href="javascript:()" class="cta submit" onclick="showPopup2();">Submit</a>
+				<a href="javascript:()" class="cta submit" onclick="validate_all_box();">Submit</a>
 			</form>
 			<button class="close" onclick="hidePopup();"></button>
 		</div>
