Red is now working, now adding international phone numbers

--- a/website.html
+++ b/website.html
@@ -34,6 +34,7 @@
 	<div class="our-story">
 		<div class="wrapper">
 			<h3>Our story</h3>
+			<!-- ------SWIPER--------------------------------------------------------------------------------------------------- -->
 			<div class="container">
 				<div class="swiper">
 				  <!-- Additional required wrapper -->
@@ -50,6 +51,7 @@
 				  <!-- If we need navigation buttons -->
 				  <div class="swiper-button-prev"></div>
 				  <div class="swiper-button-next"></div>
+				  <!-- --------------------------------------------------------------------------------------------------------------------- -->
 				</div>
 			</div>
 			<p>Our storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur storyOur story</p>
@@ -58,6 +60,7 @@
 		</div>
 		
 	</div>
+	<!-- FOOTER--------------------------------------------------------------------------------------------------------------------- -->
 	<footer>
 		<div class="footer-top"></div>
 			<div class="footer-logo"><img src="D:\Рабочее\Website\Website_2023\Website_2023\LOGO_white.png"></div>
@@ -89,7 +92,9 @@
 		<div class="fot-sep"></div>
 		<div class="copyright">Made by Joseph Gresko &#169;</div>
 	</footer>
+	<!-- ------------------------------------------------------------------------------------------------------------------------------ -->
 	</div>
+
 	<div class="popup" id="popup">
 		<div class="blanket"></div>
 		<div class="content">
@@ -112,6 +117,7 @@
 					</div>
 					<div class="item">
 					    <label>Phone number</label>
+					    <!-- PHONE NUMBER ---------------------------------------------------------------------- -->
 					    <input type="text" class="text" id="text4" placeholder="Phone number">
 					</div>
 				</div>
