Made an animaion on the hero banner link and added a new font

--- a/website.html
+++ b/website.html
@@ -4,13 +4,17 @@
 	<title>HELP-UKRAINE</title>
 	<link rel="stylesheet" type="text/css" href="D:\Рабочее\Website\Website_2023\Website_2023\main.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="Hero-banner">
 		<div class="wrapper">
 			<h1 class="uniforms">Do you have used<br> uniforms?<br/></h1>
+			<a class="cta alt" href="#nav">Help Ukrainian army</a>
 			<div class="soldier_box"><img src="D:\Рабочее\Website\Website_2023\Website_2023\soldier_main_draft.png" alt=""></div>
-			<h1 class="ctaalt"><a class="cta alt" href="#nav">Help Ukrainian army</a></h1>
+
 		</div>
 	</div>
 	<nav id="nav">
