--- a/website.html
+++ b/website.html
@@ -20,7 +20,7 @@
 	<nav id="nav">
 		<a href="#" class="logo"></a>	
 		<ul> 
-			<li><a href="javascript:()" onclick="showPopup();">Sign up</a></li>
+			<li><a href="javascript:()" onclick="show_popup_main();">Sign up</a></li>
 			<li><a href="#">About us</a></li>	
 		</ul>
 	</nav>
@@ -97,6 +97,21 @@
 		<div class="copyright">Made by Joseph Gresko &#169;</div>
 	</footer>
 	<!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+	<div class="popup-main" id="popup-main">
+		<div class="blanket"></div>
+		<div class="content">
+				<div class="box-1">
+					<a href="#">CLICK THIS A</a>
+					<h3>Send Uniforms</h3>
+				</div>
+				<div class="box-2">
+					<a href="#">CLICK THIS A</a>
+					<h3>Donate</h3>
+				</div>
+			<button class="close" onclick="hide_popup_main();"></button>
+		</div>
+	</div>
+	<!-- ------------------------------------------------------------------------------------------------------------------------------ -->
 	</div>
 
 	<div class="popup" id="popup">
@@ -121,7 +136,6 @@
 					</div>
 					<div class="item">
 					    <label>Phone number</label>
-					    <!-- PHONE NUMBER ---------------------------------------------------------------------- -->
 					    <input type="text" class="text" id="text4" placeholder="Phone number">
 					</div>
 				</div>
@@ -130,6 +144,7 @@
 			<button class="close" onclick="hidePopup();"></button>
 		</div>
 	</div>
+<!-- ------------------------------------------------------------------------------------------------------------------------------ -->
 	<div class="popup-2" id="popup-2">
 		<div class="blanket"></div>
 		<div class="content">
@@ -140,7 +155,7 @@
 		</div>
 	</div>
 
-
+<!-- ------------------------------------------------------------------------------------------------------------------------------ -->
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script src="script.js" type="text/javascript"></script>
 </body>
