Located text in the main popup

--- a/website.html
+++ b/website.html
@@ -101,12 +101,16 @@
 		<div class="blanket"></div>
 		<div class="content">
 				<div class="box-1">
-					<a href="#">CLICK THIS A</a>
+					<a href="#"></a>
 					<h3>Send Uniforms</h3>
 				</div>
 				<div class="box-2">
-					<a href="#">CLICK THIS A</a>
+					<a href="#"></a>
 					<h3>Donate</h3>
+				</div>
+				<div class="box-3">
+					<a href="#"></a>
+					<h3>Donate Other</h3>
 				</div>
 			<button class="close" onclick="hide_popup_main();"></button>
 		</div>
