--- a/website.html
+++ b/website.html
@@ -101,7 +101,9 @@
 		<div class="blanket"></div>
 		<div class="content">
 				<div class="box-1">
-					<a href="#"></a>
+					<video onmouseover="this.play()" onmouseout="this.pause();this.currentTime=0;">
+					<source src="D:\Рабочее\Website\Website_2023\Website_2023\War_tank.mp4" type="video/mp4"></source>
+					</video>
 					<h3>Send Uniforms</h3>
 				</div>
 				<div class="box-2">
