--- a/website.html
+++ b/website.html
@@ -101,18 +101,20 @@
 		<div class="blanket"></div>
 		<div class="content">
 				<div class="box-1">
-					<video onmouseover="this.play()" onmouseout="this.pause();this.currentTime=0;">
-					<source src="D:\Рабочее\Website\Website_2023\Website_2023\War_tank.mp4" type="video/mp4"></source>
+					<video loop="loop" onmouseover="this.play()" onmouseout="this.pause();this.currentTime=0;">
+					<source src="D:\Рабочее\Website\Website_2023\Website_2023\Soldiers.mp4" type="video/mp4"></source>
 					</video>
 					<h3>Send Uniforms</h3>
 				</div>
 				<div class="box-2">
-					<a href="#"></a>
-					<h3>Donate</h3>
+					<h3>Donate Money</h3>
+					<video loop="loop" onmouseover="this.play()" onmouseout="this.pause();this.currentTime=0;">
+					<source src="D:\Рабочее\Website\Website_2023\Website_2023\Donetsk.mp4" type="video/mp4"></source>
 				</div>
 				<div class="box-3">
-					<a href="#"></a>
 					<h3>Donate Other</h3>
+					<video loop="loop" onmouseover="this.play()" onmouseout="this.pause();this.currentTime=0;">
+					<source src="D:\Рабочее\Website\Website_2023\Website_2023\Wave_flag.mp4" type="video/mp4"></source>
 				</div>
 			<button class="close" onclick="hide_popup_main();"></button>
 		</div>
