--- a/website.html
+++ b/website.html
@@ -101,17 +101,24 @@
 		<div class="blanket"></div>
 		<div class="content">
 				<div class="box-1">
-					<video loop="loop" onmouseover="this.play()" onmouseout="this.pause();this.currentTime=0;">
+					<div class="image_border_1"><img src="D:\Рабочее\Website\Website_2023\Website_2023\tshirt.png" alt=""></div>
+					<video id="vid1" loop="loop" onmouseover="this.play()" onmouseout="this.pause();this.currentTime=0;">
 					<source src="D:\Рабочее\Website\Website_2023\Website_2023\Soldiers.mp4" type="video/mp4"></source>
 					</video>
 					<h3>Send Uniforms</h3>
 				</div>
 				<div class="box-2">
+					<div class="image_border_2"><img src="D:\Рабочее\Website\Website_2023\Website_2023\money.png" alt=""></div>
 					<h3>Donate Money</h3>
 					<video loop="loop" onmouseover="this.play()" onmouseout="this.pause();this.currentTime=0;">
 					<source src="D:\Рабочее\Website\Website_2023\Website_2023\Donetsk.mp4" type="video/mp4"></source>
 				</div>
 				<div class="box-3">
+					<div class="image_border_3 pic1"><img src="D:\Рабочее\Website\Website_2023\Website_2023\boots.png" alt=""></div>
+					<div class="image_border_3 pic2"><img src="D:\Рабочее\Website\Website_2023\Website_2023\West.png" alt=""></div>
+					<div class="image_border_3 pic3"><img src="D:\Рабочее\Website\Website_2023\Website_2023\backpack.png" alt=""></div>
+					<div class="image_border_3 pic4"><img src="D:\Рабочее\Website\Website_2023\Website_2023\googles.png" alt=""></div>
+					<div class="image_border_3 pic5"><img src="D:\Рабочее\Website\Website_2023\Website_2023\mask.png" alt=""></div>
 					<h3>Donate Other</h3>
 					<video loop="loop" onmouseover="this.play()" onmouseout="this.pause();this.currentTime=0;">
 					<source src="D:\Рабочее\Website\Website_2023\Website_2023\Wave_flag.mp4" type="video/mp4"></source>
